--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Desayunos Sorpresa</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background-color: #fff0e5;
-      color: #333;
-      text-align: center;
-      padding: 20px;
-    }
-    h1 { color: #e75480; }
-    .producto {
-      border: 1px solid #ddd;
-      margin: 10px auto;
-      padding: 15px;
-      max-width: 400px;
-      background: white;
-      border-radius: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tienda en Línea</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎁 Desayunos Sorpresa</h1>
-  <p>¡Regala amor con nuestros desayunos personalizados!</p>
+    <header>
+        <h1>Bienvenido a Nuestra Tienda</h1>
+        <div class="cart-container">
+            <button id="cartButton">Carrito (0)</button>
+        </div>
+    </header>
 
-  <div class="producto">
-    <h2>Desayuno Clásico</h2>
-    <p>Café, pan, jugo y fruta</p>
-    <strong>$10.000</strong>
-  </div>
+    <section class="products">
+        <div class="product" id="product1">
+            <img src="https://via.placeholder.com/150" alt="Producto 1">
+            <h2>Producto 1</h2>
+            <p>Descripción del Producto 1.</p>
+            <span>Precio: $10</span>
+            <button onclick="addToCart('Producto 1', 10, 'product1')">Agregar al Carrito</button>
+        </div>
+        <div class="product" id="product2">
+            <img src="https://via.placeholder.com/150" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del Producto 2.</p>
+            <span>Precio: $15</span>
+            <button onclick="addToCart('Producto 2', 15, 'product2')">Agregar al Carrito</button>
+        </div>
+        <div class="product" id="product3">
+            <img src="https://via.placeholder.com/150" alt="Producto 3">
+            <h2>Producto 3</h2>
+            <p>Descripción del Producto 3.</p>
+            <span>Precio: $20</span>
+            <button onclick="addToCart('Producto 3', 20, 'product3')">Agregar al Carrito</button>
+        </div>
+    </section>
 
-  <div class="producto">
-    <h2>Desayuno Deluxe</h2>
-    <p>Incluye flores, globos y tarjeta personalizada 💐</p>
-    <strong>$20.000</strong>
-  </div>
+    <div id="cartModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" onclick="closeCart()">&times;</span>
+            <h2>Carrito de Compras</h2>
+            <ul id="cartItems"></ul>
+            <p>Total: $<span id="totalPrice">0</span></p>
+            <button onclick="checkout()">Finalizar Compra</button>
+        </div>
+    </div>
 
-  <p>Haz tu pedido por WhatsApp:  
-    <a href="https://wa.me/57TU_NUMERO" target="_blank">Escríbenos aquí</a>
-  </p>
+    <script src="script.js"></script>
 </body>
 </html>
+
