--- a/index.html
+++ b/index.html
@@ -26,27 +26,39 @@
   </section>
 
   <script src="script.js"></script>
+<!-- Botón secreto para el admin -->
 <button id="botonAdmin" onclick="window.location.href='admin.html'" style="display: none; position: fixed; bottom: 20px; right: 20px; font-size: 24px; background: none; border: none; cursor: pointer;">
   ⚙️
 </button>
 
 <script>
   let claveSecreta = "";
-  const claveCorrecta = "1234"; // Puedes cambiarla a lo que quieras
+  const claveCorrecta = "1234"; // Puedes cambiar esta clave si quieres
 
   document.addEventListener("keydown", function(event) {
     claveSecreta += event.key;
 
+    // Mostrar el botón si la clave es correcta
     if (claveSecreta.includes(claveCorrecta)) {
-      document.getElementById("botonAdmin").style.display = "block";
-      claveSecreta = ""; // Reinicia para que no siga mostrando siempre
+      const boton = document.getElementById("botonAdmin");
+      if (boton) {
+        boton.style.display = "block";
+      }
+      claveSecreta = "";
     }
 
+    // Limita el tamaño de la cadena
     if (claveSecreta.length > 10) {
-      claveSecreta = ""; // Evita que se acumulen muchas letras
+      claveSecreta = "";
     }
   });
 </script>
+
+
+
+
+
+  
 </body>
 </html>
 
