--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,38 @@
   <meta charset="UTF-8">
   <title>Administrador</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+    }
+    header {
+      background-color: #ffb6c1;
+      padding: 1em;
+      text-align: center;
+    }
+    main {
+      padding: 2em;
+    }
+    form {
+      margin-bottom: 2em;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 2em;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -20,6 +52,20 @@
       <input type="number" id="stock" placeholder="Stock" required><br>
       <button type="submit">Agregar</button>
     </form>
+
+    <h2>Pedidos Entrantes</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Cliente</th>
+          <th>Producto</th>
+          <th>Estado de Pago</th>
+        </tr>
+      </thead>
+      <tbody id="pedidos-lista">
+        <!-- Aquí se añadirán los pedidos dinámicamente -->
+      </tbody>
+    </table>
   </main>
 
   <script>
@@ -34,7 +80,6 @@
         const reader = new FileReader();
         reader.onload = function(event) {
           const imageUrl = event.target.result;
-          // Aquí puedes enviar los datos del producto al servidor o almacenarlos localmente
           alert(`Producto agregado: ${nombre}, Precio: ${precio}, Imagen: ${imageUrl}, Stock: ${stock}`);
         };
         reader.readAsDataURL(imagen);
@@ -42,6 +87,22 @@
         alert("Por favor, selecciona una imagen.");
       }
     }
+
+    // Función para añadir pedidos a la tabla
+    function agregarPedido(cliente, producto, estadoPago) {
+      const pedidosLista = document.getElementById('pedidos-lista');
+      const fila = document.createElement('tr');
+      fila.innerHTML = `
+        <td>${cliente}</td>
+        <td>${producto}</td>
+        <td>${estadoPago}</td>
+      `;
+      pedidosLista.appendChild(fila);
+    }
+
+    // Ejemplo de cómo añadir un pedido
+    agregarPedido('Juan Pérez', 'Desayuno Completo', 'Pagado');
+    agregarPedido('Ana Gómez', 'Desayuno Ligero', 'Pendiente');
   </script>
 </body>
 </html>
