--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
   <header>
+    <img src="ruta/del/logo.png" alt="Logo de la empresa" style="width: 50px; height: auto;">
     <h1>Sorpresas in Style</h1>
     <nav>
       <a href="index.html">Inicio</a>
-      </nav>
+    </nav>
   </header>
 
   <main id="productos-container">
@@ -25,11 +26,36 @@
   </section>
 
   <script src="script.js"></script>
-<!-- Botón secreto para el admin -->
-<button id="botonAdmin" onclick="window.location.href='admin.html'" style="display: none; position: fixed; bottom: 20px; right: 20px; font-size: 24px; background: none; border: none; cursor: pointer;">
-  ⚙️
-</button>
+  <!-- Botón secreto para el admin -->
+  <button id="botonAdmin" onclick="window.location.href='admin.html'" style="display: none; position: fixed; bottom: 20px; right: 20px; font-size: 24px; background: none; border: none; cursor: pointer;">
+    ⚙️
+  </button>
 
+  <script>
+    let claveSecreta = "";
+    const claveCorrecta = "1234"; // Puedes cambiar esta clave si quieres
+
+    document.addEventListener("keydown", function(event) {
+      claveSecreta += event.key;
+
+      // Mostrar el botón si la clave es correcta
+      if (claveSecreta.includes(claveCorrecta)) {
+        const boton = document.getElementById("botonAdmin");
+        if (boton) {
+          boton.style.display = "block";
+        }
+        claveSecreta = "";
+      }
+
+      // Limita el tamaño de la cadena
+      if (claveSecreta.length > 10) {
+        claveSecreta = "";
+      }
+    });
+  </script>
+
+</body>
+</html>
 <script>
   let claveSecreta = "";
   const claveCorrecta = "1234"; // Puedes cambiar esta clave si quieres
