--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
   </header>
 
   <main id="productos-container">
-    <!-- Aquí se mostrarán los productos -->
+    <div class="producto-tarjeta">
+      <img src="ruta/del/producto1.png" alt="Producto 1" class="producto-imagen">
+      <h3 class="producto-nombre">Nombre del Producto 1</h3>
+      <p class="producto-precio">$10.00</p>
+    </div>
+    <div class="producto-tarjeta">
+      <img src="ruta/del/producto2.png" alt="Producto 2" class="producto-imagen">
+      <h3 class="producto-nombre">Nombre del Producto 2</h3>
+      <p class="producto-precio">$15.00</p>
+    </div>
+    <!-- Añade más productos aquí -->
   </main>
 
   <section id="carrito">
