--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -76,7 +75,7 @@
     }
 
     #botonAdmin {
-      display: none;
+      display: block;
       position: fixed;
       bottom: 20px;
       right: 20px;
@@ -87,7 +86,7 @@
     }
 
     #admin-panel {
-      display: none;
+      display: block;
       padding: 20px;
     }
 
@@ -195,7 +194,9 @@
       claveSecreta += event.key;
       if (claveSecreta.includes(claveCorrecta)) {
         const boton = document.getElementById("botonAdmin");
-        boton.style.display = "block";
+        const panel = document.getElementById("admin-panel");
+        boton.style.display = "none";
+        panel.style.display = "none";
         claveSecreta = "";
       }
       if (claveSecreta.length > 10) claveSecreta = "";
