--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     }
 
     #botonAdmin {
-      display: block;
+      display: none; /* Ocultar por defecto */
       position: fixed;
       bottom: 20px;
       right: 20px;
@@ -86,7 +86,7 @@
     }
 
     #admin-panel {
-      display: block;
+      display: none; /* Ocultar por defecto */
       padding: 20px;
     }
 
