--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -90,22 +89,6 @@
       display: none; /* Ocultar por defecto */
       padding: 20px;
     }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 2em;
-    }
-
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-
-    th {
-      background-color: #f2f2f2;
-    }
   </style>
 </head>
 <body>
@@ -141,28 +124,13 @@
       <h3>Actualizar Logo</h3>
       <input type="file" id="logo-input" accept="image/*">
       <button onclick="guardarLogo()">Guardar Logo</button>
-
-      <h3>Pedidos Entrantes</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>Cliente</th>
-            <th>Producto</th>
-            <th>Estado de Pago</th>
-          </tr>
-        </thead>
-        <tbody id="pedidos-lista"></tbody>
-      </table>
-
-      <h3>Eliminar Productos</h3>
-      <ul id="lista-productos-admin"></ul>
     </section>
   </main>
 
   <button id="botonAdmin" onclick="alternarAdmin()">⚙️</button>
 
   <script>
-    let productos = JSON.parse(localStorage.getItem('productos')) || [
+    let productos = [
       {
         id: 1,
         nombre: "Desayuno Romántico",
@@ -183,13 +151,10 @@
 
     document.addEventListener("DOMContentLoaded", () => {
       mostrarProductos();
-      mostrarProductosAdmin();
       const logoUrl = localStorage.getItem('companyLogo');
       if (logoUrl) {
         document.getElementById('company-logo').src = logoUrl;
       }
-      agregarPedido('Juan Pérez', 'Desayuno Completo', 'Pagado');
-      agregarPedido('Ana Gómez', 'Desayuno Ligero', 'Pendiente');
     });
 
     document.addEventListener("keydown", function(event) {
@@ -217,19 +182,6 @@
           <button onclick="agregarAlCarrito(${p.id})">Agregar</button>
         `;
         contenedor.appendChild(div);
-      });
-    }
-
-    function mostrarProductosAdmin() {
-      const lista = document.getElementById("lista-productos-admin");
-      lista.innerHTML = "";
-      productos.forEach((p, index) => {
-        const li = document.createElement("li");
-        li.innerHTML = `
-          ${p.nombre} - $${p.precio}
-          <button onclick="eliminarProducto(${index})">Eliminar</button>
-        `;
-        lista.appendChild(li);
       });
     }
 
@@ -283,33 +235,13 @@
             imagen: imageUrl
           };
           productos.push(nuevoProducto);
-          localStorage.setItem('productos', JSON.stringify(productos));
           mostrarProductos();
-          mostrarProductosAdmin();
           alert("Producto agregado exitosamente");
         };
         reader.readAsDataURL(imagen);
       } else {
         alert("Por favor, selecciona una imagen.");
       }
-    }
-
-    function eliminarProducto(index) {
-      productos.splice(index, 1);
-      localStorage.setItem('productos', JSON.stringify(productos));
-      mostrarProductos();
-      mostrarProductosAdmin();
-    }
-
-    function agregarPedido(cliente, producto, estadoPago) {
-      const pedidosLista = document.getElementById('pedidos-lista');
-      const fila = document.createElement('tr');
-      fila.innerHTML = `
-        <td>${cliente}</td>
-        <td>${producto}</td>
-        <td>${estadoPago}</td>
-      `;
-      pedidosLista.appendChild(fila);
     }
 
     function guardarLogo() {
